<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.kaivanshah.assignment82.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Page_Title" android:textSize="24sp" android:id="@+id/tv_Title" android:gravity="center_horizontal" android:paddingBottom="@dimen/activity_vertical_margin" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:id="@+id/tv_Name"  android:hint="@string/Page_Name" android:layout_below="@id/tv_Title" android:paddingBottom="@dimen/activity_vertical_margin" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:id="@+id/tv_Age"  android:hint="@string/Page_Age" android:layout_below="@id/tv_Name" android:paddingBottom="@dimen/activity_vertical_margin" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:id="@+id/tv_Phone"   android:hint="@string/Page_Phone" android:layout_below="@id/tv_Age" android:paddingBottom="@dimen/activity_vertical_margin" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:id="@+id/tv_City"  android:hint="@string/Page_City" android:layout_below="@id/tv_Phone" android:paddingBottom="@dimen/activity_button_vertical_margin" />
    <Button
        android:layout_width="@dimen/activity_Button_size"
        android:layout_height="wrap_content" android:background="@color/colorAccent"  android:id="@+id/btn_Save" android:layout_centerHorizontal="true"  android:gravity="center" android:text="@string/Page_Save" android:layout_below="@id/tv_City" android:layout_marginBottom="@dimen/activity_button_vertical_margin" />
    <Button
        android:layout_width="@dimen/activity_Button_size"
        android:layout_height="wrap_content" android:background="@color/colorAccent"  android:id="@+id/btn_Show" android:layout_centerHorizontal="true"  android:gravity="center" android:text="@string/Page_Show" android:layout_below="@id/btn_Save" android:layout_marginBottom="@dimen/activity_button_vertical_margin"  />
</RelativeLayout>
